Links for conditional Approval delete

--- a/Purchasing.Web/Views/ConditionalApproval/Delete.cshtml
+++ b/Purchasing.Web/Views/ConditionalApproval/Delete.cshtml
@@ -53,7 +53,15 @@
 			    @* For the clear and submit buttons an empty label is required. Example: <label>&nbsp;</label> *@
 			    <div class="display-label">&nbsp;</div>
 			    <div class="display-details">
-			    <input class="button" type="submit" value="Delete" /> | @Html.ActionLink("Cancel", "Index")
+                    <input class="button" type="submit" value="Delete" /> |                
+                    @if(ViewBag.IsWorkgroup)
+                    {
+                        @Html.ActionLink("Cancel", "ByWorkgroup", "ConditionalApproval", new { id = ViewBag.WorkgroupId }, new { })
+                    }
+                    else
+                    {
+                        @Html.ActionLink("Cancel", "ByOrg", "ConditionalApproval", new {id = ViewBag.OrganizationId}, new {})
+                    }
 			    </div>
 		    </li>
 	    </ul>
