--- a/Purchasing.Web/Views/FinancialApi/Index.cshtml
+++ b/Purchasing.Web/Views/FinancialApi/Index.cshtml
@@ -3,16 +3,16 @@
 }
 
 <ul>
-    <li><strong>Order 1 Doc Number: </strong>
+    <li><strong>@Html.ActionLink("Order 1", "Review", "Order", new { id = 40 }, new { target = "order" })  Doc Number: </strong>
         @ViewBag.Order1DocNum
-    </li>
-    <li><strong>Order 2 Doc Number: </strong>
+    </}li>
+    <li><strong>@Html.ActionLink("Order 2", "Review", "Order", new { id = 42 }, new { target = "order" }) Doc Number: </strong>
         @ViewBag.Order2DocNum
     </li>
-    <li><strong>Order 3 Doc Number: </strong>
+    <li><strong>@Html.ActionLink("Order 3", "Review", "Order", new { id = 43 }, new { target = "order" }) Doc Number: </strong>
         @ViewBag.Order3DocNum
     </li>
-    <li><strong>Order 4 Doc Number: </strong>
+    <li><strong>@Html.ActionLink("Order 4", "Review", "Order", new { id = 45 }, new { target = "order" }) Doc Number: </strong>
         @ViewBag.Order4DocNum
     </li>
 </ul>
