--- a/Purchasing.Web/Views/Order/_Options.cshtml
+++ b/Purchasing.Web/Views/Order/_Options.cshtml
@@ -11,7 +11,7 @@ purchasing.options({
     SearchVendorUrl: '@Url.Action("SearchVendor", "WorkgroupVendor")',
     SearchVendorAddressUrl: '@Url.Action("SearchVendorAddress", "WorkgroupVendor")',
     SearchCommodityCodeUrl: '@Url.Action("SearchCommodityCodes")',
-    SearchBuildingUrl : '@Url.Action("SearchBuilding", "Workgroup")',
+    SearchBuildingUrl : '@Url.Action("SearchBuilding")',
     GetLineItemsAndSplitsUrl: '@Url.Action("GetLineItemsAndSplits", new { id = Model.Order.Id })',
 Guider: {
         Assets: ['@Url.Css("single/guider.css")', '@Url.Script("guider.js")', '@Url.Script("OrderTour.js")'],
