--- a/Purchasing.Web/Views/Wizard/AddAddresses.cshtml
+++ b/Purchasing.Web/Views/Wizard/AddAddresses.cshtml
@@ -5,6 +5,7 @@
     ViewBag.StepName = "Add Shipping Addresses";
     ViewBag.Previous = Url.Action("Vendors", "Wizard", new { id = Model.Workgroup.Id });
     ViewBag.Skip = Url.Action("Addresses", "Wizard", new { id = Model.Workgroup.Id});
+    ViewBag.IsAdministrative = Model.Workgroup.Administrative;
 }
 
 
