--- a/Purchasing.Web/Views/Wizard/CreateWorkgroup.cshtml
+++ b/Purchasing.Web/Views/Wizard/CreateWorkgroup.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Create";
     ViewBag.StepName = "Create Workgroup";
     ViewBag.Skip = "";
-    
+    ViewBag.IsAdministrative = false;
 }
 
 @Html.Partial("_StatusBar", 0)  
