--- a/Purchasing.Web/Views/Wizard/AddAccounts.cshtml
+++ b/Purchasing.Web/Views/Wizard/AddAccounts.cshtml
@@ -6,6 +6,7 @@
     ViewBag.StepName = "Add Account(s)";
     ViewBag.Previous = Url.Action("People", "Wizard", new { id= Model.Workgroup.Id, roleFilter="PR"});
     ViewBag.Skip = Url.Action("Accounts", "Wizard", new {id = Model.Workgroup.Id});
+    ViewBag.IsAdministrative = Model.Workgroup.Administrative;
 }
 
 @section AdditionalScripts{
