--- a/Purchasing.Web/Views/Wizard/AddSubOrganizations.cshtml
+++ b/Purchasing.Web/Views/Wizard/AddSubOrganizations.cshtml
@@ -5,6 +5,7 @@
     ViewBag.Title = Model.Workgroup.Name;
     ViewBag.StepName = "Add Suborganization(s)";
     ViewBag.Skip = Url.Action("SubOrganizations", "Wizard", new {id = Model.Workgroup.Id});
+    ViewBag.IsAdministrative = Model.Workgroup.Administrative;
 }
 
 @{
