--- a/Purchasing.Web/Views/Wizard/Addresses.cshtml
+++ b/Purchasing.Web/Views/Wizard/Addresses.cshtml
@@ -6,6 +6,7 @@
     ViewBag.Previous = Url.Action("AddAddresses", "Wizard", new { id = Model.Workgroup.Id });
     ViewBag.Next = Url.Action("AddConditionalApproval", "Wizard", new { id = Model.Workgroup.Id });
     ViewBag.ListPage = true;
+    ViewBag.IsAdministrative = Model.Workgroup.Administrative;
 }
 
 
