--- a/Purchasing.Web/Views/Workgroup/People.cshtml
+++ b/Purchasing.Web/Views/Workgroup/People.cshtml
@@ -37,7 +37,7 @@
                 $("#away-dialog").find("#name").html($(this).data("name"));
                 $("#away-dialog").find("#awayUntil").val("");
 
-                $("#away-dialog").dialog({ modal: true, buttons: {
+                $("#away-dialog").dialog({ modal: true, width: 350, height: 300, buttons: {
 
                     Confirm: function () {
 
