dynamically set text button to "Finish" at the end of the wizard

--- a/Purchasing.Web/Views/Wizard/ConditionalApprovals.cshtml
+++ b/Purchasing.Web/Views/Wizard/ConditionalApprovals.cshtml
@@ -6,6 +6,7 @@
     ViewBag.Next = Url.Action("Index", "Workgroup");
     ViewBag.ListPage = true;
     ViewBag.IsAdministrative = false;
+    ViewBag.LastStep = true;
 }
 
     @Html.Partial("_StatusBar", (int)ViewBag.WorkgroupId)
