--- a/Purchasing.Web/Views/Wizard/People.cshtml
+++ b/Purchasing.Web/Views/Wizard/People.cshtml
@@ -30,6 +30,10 @@
 			break;
 	}
     ViewBag.IsAdministrative = Model.Workgroup.Administrative;
+    if(ViewBag.IsAdministrative && (int)ViewBag.StepNumber == 6)
+    {
+        ViewBag.LastStep = true;
+    }
 }
 
 
