KFS order type requires specifying kfsdoctype. Other complete options do not require any specifics

--- a/Purchasing.Web/Views/Order/Review.cshtml
+++ b/Purchasing.Web/Views/Order/Review.cshtml
@@ -85,7 +85,8 @@
                 UserSearchUrl: "@Url.Action("SearchUsers", "DirectorySearch")",
                 AntiForgeryToken: $('input[name="__RequestVerificationToken"]').val(),
                 CanEdit: '@Model.CanEditOrder' === 'True',
-                CanCancel: '@Model.CanCancelOrder' === 'True'
+                CanCancel: '@Model.CanCancelOrder' === 'True',
+                CanComplete: '@Model.IsPurchaser' === 'True'
             });
 
             purchasing.init();
