--- a/Purchasing.Web/Views/Admin/Index.cshtml
+++ b/Purchasing.Web/Views/Admin/Index.cshtml
@@ -6,6 +6,17 @@
     ViewBag.Title = "Admins";
 }
 
+
+
+@section AdditionalScripts
+{
+    <style type="text/css">
+    div.dataTables_wrapper {margin-top: 0.5em;}
+    </style>
+
+}
+
+
 <section class="display-form">
 
     <header class="ui-widget-header ui-corner-top">Purchasing Administrators
