added edit UI for reference  number. no server saving yet# Please enter the commit message for your changes. Lines starting

--- a/Purchasing.Web/Views/Order/Review.cshtml
+++ b/Purchasing.Web/Views/Order/Review.cshtml
@@ -92,7 +92,8 @@
                 CanEdit: '@Model.CanEditOrder' === 'True',
                 CanCancel: '@Model.CanCancelOrder' === 'True',
                 CanComplete: '@Model.IsPurchaser' === 'True',
-                IsKfsOrder: '@validKfsOrder' === 'True'
+                IsKfsOrder: '@validKfsOrder' === 'True',
+                IsComplete: '@Model.Order.StatusCode.IsComplete' === 'True'
             });
 
             purchasing.init();
